the searcher works bad

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <input id="searchInput" name="titulo" type="text" class="form-control" placeholder="Título" aria-label="titulo">
                 <button id="btnSearch" class="btn btn-success col-md-6 mt-2">Consultar  
                 </button>
+
+             <button id="btnReset" class="btn btn-info text-white col-md-4 mt-2">Limpiar
+
+             </button>
               
               </div>
           
